@@ -1,3 +1,6 @@
+Alastair S - Tue Mar 1 2005
+	calc and othello are now relative
+
 Alastair S - Thu Feb 24 2005
 	slider is now relative to screen size; is now grey also
 	screen_info globalized
